_sass/_bullets.scss
ul, ol {
  padding-inline-start: 2em;
  margin-block-start: 0.5em;
  margin-block-end: 0.5em;
  ul, ol {
    padding-inline-start: 1.2em;
  }
  blockquote {
    padding-left: 0.5em;
    margin: 0 0.5em;
  }
}
ol ::marker, ul ::marker {
  color: var(--color-bullet);
}
ol > li {
  ul > li {
    list-style-type: initial;
  }
  ol > li {
    list-style: lower-alpha;
    ol > li {
      list-style: lower-greek;
    }
  }
}

ul > li > ul > li {
  list-style-type: initial;
  ul > li {
    list-style-type: initial;
  }
}

